--- a/Depo/Depo/Presentation/CollectionViewCells/CollectionViewCellForAudio.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/CollectionViewCellForAudio.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCellForAudio" id="gTV-IL-0wX" customClass="CollectionViewCellForAudio" customModule="Depo_LifeTech" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCellForAudio" id="gTV-IL-0wX" customClass="CollectionViewCellForAudio" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -21,7 +20,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteStar" translatesAutoresizingMaskIntoConstraints="NO" id="QBu-DP-PdN">
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconFavoriteStar" translatesAutoresizingMaskIntoConstraints="NO" id="QBu-DP-PdN">
                         <rect key="frame" x="6" y="8" width="13" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="13" id="VeK-4E-uyO"/>
@@ -99,10 +98,11 @@
                 <outlet property="selectionView" destination="c0S-7X-BEV" id="cUX-bs-FGv"/>
                 <outlet property="titleLabel" destination="cVQ-eE-Srw" id="F3U-ef-Oln"/>
             </connections>
+            <point key="canvasLocation" x="139" y="93"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="IntroduceImage1" width="364" height="404"/>
-        <image name="favoriteStar" width="13" height="12"/>
+        <image name="IntroduceImage1" width="720" height="600"/>
+        <image name="iconFavoriteStar" width="28" height="28"/>
     </resources>
 </document>
