--- a/Depo/Depo/Presentation/UserStories/CreateStory/CreationStorySelectionItems/SelectAudio/CreateStoryAudioSelectionItemViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/CreateStory/CreationStorySelectionItems/SelectAudio/CreateStoryAudioSelectionItemViewController.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,10 +14,7 @@
             <connections>
                 <outlet property="designer" destination="l4I-xA-B6y" id="w9g-ok-XNl"/>
                 <outlet property="emtyListView" destination="CaV-tJ-vhx" id="Cix-uH-tAT"/>
-                <outlet property="firstSegmentButton" destination="aDi-cV-Aiq" id="u1l-7w-rgd"/>
-                <outlet property="firstSegmentShadowView" destination="kJb-KT-Igk" id="6f9-UQ-TFD"/>
-                <outlet property="secondSegmentButton" destination="Dsi-h7-KnH" id="gsb-Gh-bll"/>
-                <outlet property="secondSegmentShadowView" destination="2HF-eJ-Wnb" id="3yR-Ib-Tz0"/>
+                <outlet property="segmentedControl" destination="rO4-3s-YdY" id="srA-mm-C0y"/>
                 <outlet property="tableView" destination="WvP-6C-fk1" id="0t0-ir-JXP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -26,56 +24,15 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="uWo-Hz-cmj" userLabel="Segmented Control">
-                    <rect key="frame" x="50" y="13" width="275" height="40"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kJb-KT-Igk" userLabel="firstShadowView">
-                            <rect key="frame" x="0.0" y="0.0" width="133.5" height="40"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aDi-cV-Aiq" userLabel="First" customClass="InsetsButton" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="133.5" height="40"/>
-                                    <color key="backgroundColor" name="tint"/>
-                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal" title="Button">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="firstSegmentButtonAction:" destination="-1" eventType="touchUpInside" id="CNK-bg-vLa"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="aDi-cV-Aiq" secondAttribute="trailing" id="6k5-IY-889"/>
-                                <constraint firstAttribute="bottom" secondItem="aDi-cV-Aiq" secondAttribute="bottom" id="M1y-zR-ejI"/>
-                                <constraint firstItem="aDi-cV-Aiq" firstAttribute="leading" secondItem="kJb-KT-Igk" secondAttribute="leading" id="Uvf-ns-wWr"/>
-                                <constraint firstItem="aDi-cV-Aiq" firstAttribute="top" secondItem="kJb-KT-Igk" secondAttribute="top" id="tij-7h-Xy2"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2HF-eJ-Wnb" userLabel="secondShadowView">
-                            <rect key="frame" x="141.5" y="0.0" width="133.5" height="40"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Dsi-h7-KnH" userLabel="Second" customClass="InsetsButton" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="134" height="40"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="tintColor" name="tertiaryBackground"/>
-                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal" title="Button">
-                                        <color key="titleColor" name="label"/>
-                                        <color key="titleShadowColor" name="drawerShadow"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="SecondSegmentButtonAction:" destination="-1" eventType="touchUpInside" id="sYC-lO-bwt"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                        </view>
-                    </subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rO4-3s-YdY" customClass="CustomSegmentedView" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="58" y="13" width="259" height="40"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="4xj-st-r8Q"/>
+                        <constraint firstAttribute="height" constant="40" id="OgR-VZ-5S0"/>
                     </constraints>
-                </stackView>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WvP-6C-fk1">
-                    <rect key="frame" x="0.0" y="80" width="375" height="587"/>
+                    <rect key="frame" x="0.0" y="65" width="375" height="602"/>
                     <color key="backgroundColor" name="primaryBackground"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="eid-Qc-yBg"/>
@@ -114,13 +71,13 @@
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="CaV-tJ-vhx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="5XS-GW-ekY"/>
+                <constraint firstItem="rO4-3s-YdY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="58" id="7cs-Nh-CFq"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CaV-tJ-vhx" secondAttribute="trailing" constant="16" id="9Mf-V8-JQs"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="WvP-6C-fk1" secondAttribute="bottom" id="DHP-9m-Zol"/>
-                <constraint firstItem="uWo-Hz-cmj" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="13" id="O82-xc-eaS"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="rO4-3s-YdY" secondAttribute="trailing" constant="58" id="KB0-wt-8VD"/>
                 <constraint firstItem="WvP-6C-fk1" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="PND-fT-wnZ"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="uWo-Hz-cmj" secondAttribute="trailing" constant="50" id="d98-2W-U3A"/>
-                <constraint firstItem="uWo-Hz-cmj" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="hMc-hW-TKu"/>
-                <constraint firstItem="WvP-6C-fk1" firstAttribute="top" secondItem="uWo-Hz-cmj" secondAttribute="bottom" constant="27" id="uP4-bI-P0c"/>
+                <constraint firstItem="rO4-3s-YdY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="13" id="dtT-Uh-wLw"/>
+                <constraint firstItem="WvP-6C-fk1" firstAttribute="top" secondItem="rO4-3s-YdY" secondAttribute="bottom" constant="12" id="gdC-ik-2nX"/>
                 <constraint firstItem="WvP-6C-fk1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="uwR-j7-mLX"/>
                 <constraint firstItem="CaV-tJ-vhx" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="yvZ-Hk-5ZD"/>
             </constraints>
@@ -136,20 +93,11 @@
     </objects>
     <resources>
         <image name="ImageNoMusics" width="96" height="72"/>
-        <namedColor name="drawerShadow">
-            <color red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="label">
-            <color red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="tertiaryBackground">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="tint">
-            <color red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
