--- a/Depo/Depo/Presentation/UserStories/InstaPick/AnalyzeHistory/AnalyzeHistoryViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/InstaPick/AnalyzeHistory/AnalyzeHistoryViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -67,7 +67,7 @@
                     <rect key="frame" x="0.0" y="537" width="375" height="86"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lbx-5u-NN7">
-                            <rect key="frame" x="90" y="-75" width="41.5" height="95"/>
+                            <rect key="frame" x="39" y="-74.5" width="41.5" height="95"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMl-8z-d71">
                                     <rect key="frame" x="0.0" y="0.0" width="41.5" height="41"/>
@@ -92,10 +92,9 @@ Here!</string>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAp-wq-sNv" customClass="BlueButtonWithMediumWhiteText" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="79" y="20" width="217" height="46"/>
+                            <rect key="frame" x="28" y="20.5" width="319" height="45"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="46" id="G0q-oF-t9L"/>
-                                <constraint firstAttribute="width" constant="217" id="cwL-zF-y2y"/>
+                                <constraint firstAttribute="height" constant="45" id="G0q-oF-t9L"/>
                             </constraints>
                             <state key="normal" title="New InstaPick Analysis"/>
                             <connections>
@@ -106,8 +105,10 @@ Here!</string>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="LAp-wq-sNv" firstAttribute="centerX" secondItem="muL-9i-x4Y" secondAttribute="centerX" id="1gO-Vy-fTk"/>
+                        <constraint firstItem="LAp-wq-sNv" firstAttribute="leading" secondItem="muL-9i-x4Y" secondAttribute="leading" constant="28" id="AZN-eS-DsJ"/>
                         <constraint firstAttribute="height" constant="86" id="DKn-b9-bh0"/>
                         <constraint firstItem="Lbx-5u-NN7" firstAttribute="leading" secondItem="LAp-wq-sNv" secondAttribute="leading" constant="11" id="Lpu-eb-M98"/>
+                        <constraint firstAttribute="trailing" secondItem="LAp-wq-sNv" secondAttribute="trailing" constant="28" id="i9u-fx-kFY"/>
                         <constraint firstItem="LAp-wq-sNv" firstAttribute="top" secondItem="Lbx-5u-NN7" secondAttribute="bottom" id="q0D-WU-a0n"/>
                         <constraint firstItem="LAp-wq-sNv" firstAttribute="centerY" secondItem="muL-9i-x4Y" secondAttribute="centerY" id="uva-Oq-cmj"/>
                     </constraints>
