--- a/Depo/Depo/Presentation/CollectionViewCells/InstaPickHashtagCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/InstaPickHashtagCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,7 +34,7 @@
                                     <constraint firstAttribute="width" constant="30" id="nWw-LZ-hp2"/>
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="11" minY="11" maxX="11" maxY="11"/>
-                                <state key="normal" image="hashtagCloseButton"/>
+                                <state key="normal" image="iconCancelUnborder"/>
                                 <connections>
                                     <action selector="onCloseTap:" destination="gTV-IL-0wX" eventType="touchUpInside" id="ukl-9u-3wS"/>
                                 </connections>
@@ -69,7 +69,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="hashtagCloseButton" width="17" height="17"/>
+        <image name="iconCancelUnborder" width="24" height="24"/>
         <namedColor name="hashtagBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
