--- a/Depo/Depo/Presentation/SubViews/MailVerification/MailVerificationViewController.xib
+++ b/Depo/Depo/Presentation/SubViews/MailVerification/MailVerificationViewController.xib
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MailVerificationViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MailVerificationViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="alertLikeView" destination="uQr-Nc-nBr" id="3Rs-Po-7Df"/>
                 <outlet property="contentView" destination="dAq-23-egP" id="uwy-gs-yRr"/>
@@ -30,10 +28,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dAq-23-egP" userLabel="ContentView">
-                            <rect key="frame" x="0.0" y="-0.5" width="374" height="667"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQr-Nc-nBr">
-                                    <rect key="frame" x="47" y="213.5" width="280" height="240"/>
+                                    <rect key="frame" x="47.5" y="213.5" width="280" height="240"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oGR-tC-qlf">
                                             <rect key="frame" x="0.0" y="192" width="280" height="1"/>
@@ -53,7 +51,6 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="6Nm-a1-xk8"/>
                                             </constraints>
-                                            <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
@@ -63,12 +60,12 @@
                                                 <constraint firstAttribute="height" constant="40" id="VS3-Fx-fPK"/>
                                                 <constraint firstAttribute="width" constant="40" id="scE-7O-cug"/>
                                             </constraints>
-                                            <state key="normal" image="grayCloseButton"/>
+                                            <state key="normal" image="iconCancelUnborder"/>
                                             <connections>
                                                 <action selector="refuseAction:" destination="-1" eventType="touchUpInside" id="oA0-gg-4HG"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0xo-kd-RYU">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0xo-kd-RYU">
                                             <rect key="frame" x="0.0" y="193" width="280" height="47"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="47" id="YIc-KT-K4T"/>
@@ -115,7 +112,7 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+            <color key="backgroundColor" systemColor="scrollViewTexturedBackgroundColor"/>
             <constraints>
                 <constraint firstItem="5IX-RG-5Du" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="5ks-u8-mIT"/>
                 <constraint firstAttribute="bottom" secondItem="5IX-RG-5Du" secondAttribute="bottom" id="LsE-03-etE"/>
@@ -123,9 +120,13 @@
                 <constraint firstItem="dAq-23-egP" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" id="fSR-kb-552"/>
                 <constraint firstAttribute="trailing" secondItem="5IX-RG-5Du" secondAttribute="trailing" id="qCx-jS-bpk"/>
             </constraints>
+            <point key="canvasLocation" x="140" y="100"/>
         </view>
     </objects>
     <resources>
-        <image name="grayCloseButton" width="17" height="17"/>
+        <image name="iconCancelUnborder" width="24" height="24"/>
+        <systemColor name="scrollViewTexturedBackgroundColor">
+            <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
