--- a/Depo/Depo/Presentation/UserStories/Others/DarkPopUp/DarkPopUpController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/DarkPopUp/DarkPopUpController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -92,7 +92,7 @@
                                                 <constraint firstAttribute="height" constant="50" id="22P-0R-NxT"/>
                                                 <constraint firstAttribute="width" constant="50" id="xy4-Q6-OGH"/>
                                             </constraints>
-                                            <state key="normal" image="grayCloseButton"/>
+                                            <state key="normal" image="iconCancelUnborder"/>
                                             <connections>
                                                 <action selector="actionCloseButton:" destination="-1" eventType="touchUpInside" id="a2F-f8-cXo"/>
                                             </connections>
@@ -152,7 +152,7 @@
         </view>
     </objects>
     <resources>
-        <image name="grayCloseButton" width="17" height="17"/>
+        <image name="iconCancelUnborder" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
