--- a/Depo/Depo/Presentation/UserStories/Others/InstapickPopUp/InstapickPopUpController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/InstapickPopUp/InstapickPopUpController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -52,7 +52,7 @@
                                                         <constraint firstAttribute="width" constant="50" id="4Fq-uK-Ivt"/>
                                                         <constraint firstAttribute="height" constant="50" id="gWa-1B-6Gr"/>
                                                     </constraints>
-                                                    <state key="normal" image="grayCloseButton"/>
+                                                    <state key="normal" image="iconCancelUnborder"/>
                                                     <connections>
                                                         <action selector="onCloseTap:" destination="-1" eventType="touchUpInside" id="blF-zg-0gi"/>
                                                     </connections>
@@ -242,7 +242,7 @@
     </objects>
     <resources>
         <image name="checkMarkDarkBlueIcon" width="14" height="11"/>
-        <image name="grayCloseButton" width="17" height="17"/>
+        <image name="iconCancelUnborder" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
